CSS in progress

--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -15,16 +15,17 @@
     <header>
         <h1>Island</h1>
         <p>Když se řekne Island, spoustě lidem se jako první vybaví sníh a led. Sama jsem tam strávila téměř rok života a zem pokrytou sněhem a ledem jsem zažila jen jediný den. Jednou věcí si ale jistá jsem: že návštěva ostrova pod polárním kruhem je pro každého tak silným zážitkem, že se sem bude chtít vrátit.</p>
-        <p>Jana Zcela Vymyšlená</p>
+        <div class="object1"></div>
+        <p class="jana">Jana Zcela Vymyšlená</p>
     </header>
 
     <main>
         <nav>
             <ul>
-                <li>Úvod</li>
-                <li>Proč jet na Island</li>
-                <li>Co musíte vidět</li>
-                <li>Fotogalerie</li>
+                <li><a href="#">Úvod</a></li>
+                <li><a href="#">Proč jet na Island</a></li>
+                <li><a href="#">Co musíte vidět</a></li>
+                <li><a href="#">Fotogalerie</a></li>
             </ul>
         </nav>
 
