CSS_mobile_in progress

--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
 
-        <section>
+        <section class="section1">
             <div class="part1">
                 <p>
                     Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
@@ -43,14 +43,11 @@
                     Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
                 </p>
             </div>
-
             <img src="images/island1.jpg" alt="Foto Island 1">
-
             <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
         </section>
 
-
-        <section>
+        <section class="section2">
             <h2>Proč jet na Island</h2>
             <div class="object2"></div>
             <div class="part2">
@@ -65,15 +62,11 @@
                     Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;
                 </p>
             </div>
-
             <img src="images/island2.jpg" alt="Foto Island 2">
-
             <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
-
         </section>
 
-
-        <section>
+        <section class="section3">
             <h2>Co musíte vidět</h2>
             <div class="object2"></div>
             <div class="part3">
@@ -97,9 +90,7 @@
                     <strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
                 </p>
             </div>
-
             <img src="images/island3.jpg" alt="Foto Island 3">
-
             <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
 
             <div class="part4">
@@ -114,34 +105,32 @@
         </section>
     </main>
 
-
     <div class="gallery">
         <h2>Fotogalerie</h2>
         <div class="object2"></div>
-
         <div class="previews">
             <img src="images/nahled1.jpg" alt="Myvatn Aurora">
-            <p>Myvatn Aurora<br>
+            <p><strong>Myvatn Aurora</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/GN5utm">Kriss Williams</a></p>
 
             <img src="images/nahled2.jpg" alt="Mountains in Iceland">
-            <p>Mountains in Iceland<br>
+            <p><strong>Mountains in Iceland</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></p>
 
             <img src="images/nahled3.jpg" alt="Life on Mars">
-            <p>Life on Mars<br>
+            <p><strong>Life on Mars</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></p>
 
             <img src="images/nahled4.jpg" alt="Stokksnes Sands">
-            <p>Stokksnes Sands<br>
+            <p><strong>Stokksnes Sands</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></p>
 
             <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
-            <p>Svartifoss (Black Fall)<br>
+            <p><strong>Svartifoss (Black Fall)</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></p>
 
             <img src="images/nahled6.jpg" alt="Landmannalaugar">
-            <p>Landmannalaugar<br>
+            <p><strong>Landmannalaugar</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></p>
 
             <img src="images/nahled7.jpg" alt="Iceland">
@@ -149,15 +138,14 @@
                 Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></p>
 
             <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
-            <p>Bruarfoss waterfalls<br>
+            <p><strong>Bruarfoss waterfalls</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></p>
 
             <img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
-            <p>Jokulsarlon glacier lagoon<br>
+            <p><strong>Jokulsarlon glacier lagoon</strong><br>
                 Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></p>
         </div>
     </div>
-
 
     <footer>
         <p>Texty převzaty z článků:</p>
@@ -165,7 +153,7 @@
         <p>Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a></p>
         <p>Michal Balada - <a href="http://www.pohora.cz/tipy-na-vylety/16352-cesta-kolem-islandu-za-10-dni/">Cesta kolem Islandu za 10 dní</a></p>
 
-        <p>Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a></p>
+        <p class="moyan">Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a></p>
     </footer>
 
 
