CSS_mobile_in progress

--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -22,14 +22,14 @@
     <main>
         <nav>
             <ul>
-                <li><a class="navigation" href="#">Úvod</a></li>
-                <li><a class="navigation" href="#">Proč jet na Island</a></li>
-                <li><a class="navigation" href="#">Co musíte vidět</a></li>
-                <li><a class="navigation" href="#">Fotogalerie</a></li>
+                <li><a class="navigation" href="#section1">Úvod</a></li>
+                <li><a class="navigation" href="#section2">Proč jet na Island</a></li>
+                <li><a class="navigation" href="#section3">Co musíte vidět</a></li>
+                <li><a class="navigation" href="#section4">Fotogalerie</a></li>
             </ul>
         </nav>
 
-        <section class="section1">
+        <section id="section1">
             <div class="part1">
                 <p>
                     Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
@@ -47,7 +47,7 @@
             <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
         </section>
 
-        <section class="section2">
+        <section id="section2">
             <h2>Proč jet na Island</h2>
             <div class="object2"></div>
             <div class="part2">
@@ -66,7 +66,7 @@
             <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
         </section>
 
-        <section class="section3">
+        <section id="section3">
             <h2>Co musíte vidět</h2>
             <div class="object2"></div>
             <div class="part3">
@@ -93,6 +93,7 @@
             <img src="images/island3.jpg" alt="Foto Island 3">
             <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
 
+
             <div class="part4">
                 <p>
                     <strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
@@ -106,7 +107,9 @@
     </main>
 
     <div class="gallery">
-        <h2>Fotogalerie</h2>
+        <section id="section4">
+            <h2>Fotogalerie</h2>
+        </section>
         <div class="object2"></div>
         <div class="previews">
             <img src="images/nahled1.jpg" alt="Myvatn Aurora">
