CSS in progress

--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
 
-        <section id="section1">
+        <section id="section1" class="sectionone">
             <div class="part1">
                 <p>
                     Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!
@@ -47,7 +47,7 @@
             <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
         </section>
 
-        <section id="section2">
+        <section id="section2" class="sectiontwo">
             <h2>Proč jet na Island</h2>
             <div class="object2"></div>
             <div class="part2">
@@ -66,7 +66,7 @@
             <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
         </section>
 
-        <section id="section3">
+        <section id="section3" class="sectionthree">
             <h2>Co musíte vidět</h2>
             <div class="object2"></div>
             <div class="part3">
@@ -111,42 +111,55 @@
             <h2>Fotogalerie</h2>
         </section>
         <div class="object2"></div>
+
         <div class="previews">
-            <img src="images/nahled1.jpg" alt="Myvatn Aurora">
-            <p><strong>Myvatn Aurora</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/GN5utm">Kriss Williams</a></p>
 
-            <img src="images/nahled2.jpg" alt="Mountains in Iceland">
-            <p><strong>Mountains in Iceland</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></p>
+            <figure>
+                <img src="images/nahled1.jpg" alt="Myvatn Aurora">
+                <figcaption><strong>Myvatn Aurora</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/GN5utm">Kriss Williams</a></figcaption>
+            </figure>
 
-            <img src="images/nahled3.jpg" alt="Life on Mars">
-            <p><strong>Life on Mars</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></p>
+            <figure>
+                <img src="images/nahled2.jpg" alt="Mountains in Iceland">
+                <figcaption><strong>Mountains in Iceland</strong> <br>
+                    Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></figcaption>
+            </figure>
 
-            <img src="images/nahled4.jpg" alt="Stokksnes Sands">
-            <p><strong>Stokksnes Sands</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></p>
+            <figure><img src="images/nahled3.jpg" alt="Life on Mars">
+                <figcaption><strong>Life on Mars</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></figcaption>
+            </figure>
 
-            <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
-            <p><strong>Svartifoss (Black Fall)</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></p>
+            <figure><img src="images/nahled4.jpg" alt="Stokksnes Sands">
+                <figcaption><strong>Stokksnes Sands</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></figcaption>
+            </figure>
 
-            <img src="images/nahled6.jpg" alt="Landmannalaugar">
-            <p><strong>Landmannalaugar</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></p>
+            <figure><img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
+                <figcaption><strong>Svartifoss (Black Fall)</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></figcaption>
+            </figure>
 
-            <img src="images/nahled7.jpg" alt="Iceland">
-            <p>Iceland<br>
-                Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></p>
+            <figure><img src="images/nahled6.jpg" alt="Landmannalaugar">
+                <figcaption><strong>Landmannalaugar</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></figcaption>
+            </figure>
 
-            <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
-            <p><strong>Bruarfoss waterfalls</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></p>
+            <figure><img src="images/nahled7.jpg" alt="Iceland">
+                <figcaption><strong>Iceland</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></figcaption>
+            </figure>
 
-            <img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
-            <p><strong>Jokulsarlon glacier lagoon</strong><br>
-                Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></p>
+            <figure><img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
+                <figcaption><strong>Bruarfoss waterfalls</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></figcaption>
+            </figure>
+
+            <figure><img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
+                <figcaption><strong>Jokulsarlon glacier lagoon</strong><br>
+                    Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
+            </figure>
         </div>
     </div>
 
