--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -43,8 +43,11 @@
                     Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.
                 </p>
             </div>
-            <img src="images/island1.jpg" alt="Foto Island 1">
-            <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
+            <figure><img src="images/island1.jpg" alt="Foto Island 1">
+                <figcaption>
+                    <p class="credit">Photo © <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a></p>
+                </figcaption>
+            </figure>
         </section>
 
         <section id="section2" class="sectiontwo">
@@ -62,8 +65,11 @@
                     Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;
                 </p>
             </div>
-            <img src="images/island2.jpg" alt="Foto Island 2">
-            <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
+            <figure><img src="images/island2.jpg" alt="Foto Island 2">
+                <figcaption>
+                    <p class="credit">Photo © <a href="https://flic.kr/p/yiAg2h">Moyan Brenn</a></p>
+                </figcaption>
+            </figure>
         </section>
 
         <section id="section3" class="sectionthree">
@@ -90,15 +96,17 @@
                     <strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.
                 </p>
             </div>
-            <img src="images/island3.jpg" alt="Foto Island 3">
-            <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+            <figure><img src="images/island3.jpg" alt="Foto Island 3">
+                <figcaption>
+                    <p class="credit">Photo © <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a></p>
+                </figcaption>
+            </figure>
 
 
             <div class="part4">
                 <p>
                     <strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.
                 </p>
-
                 <p>
                     <strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.
                 </p>
@@ -107,6 +115,7 @@
     </main>
 
     <div class="gallery">
+
         <section id="section4">
             <h2>Fotogalerie</h2>
         </section>
@@ -114,49 +123,55 @@
 
         <div class="previews">
 
-            <figure>
+            <figure class="photo">
                 <img src="images/nahled1.jpg" alt="Myvatn Aurora">
                 <figcaption><strong>Myvatn Aurora</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/GN5utm">Kriss Williams</a></figcaption>
             </figure>
 
-            <figure>
+            <figure class="photo">
                 <img src="images/nahled2.jpg" alt="Mountains in Iceland">
                 <figcaption><strong>Mountains in Iceland</strong> <br>
                     Photo &copy; <a href="https://flic.kr/p/qCC5fd">Kamil Porembiński</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled3.jpg" alt="Life on Mars">
+            <figure class="photo">
+                <img src="images/nahled3.jpg" alt="Life on Mars">
                 <figcaption><strong>Life on Mars</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/DrxutX">Kriss Williams</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled4.jpg" alt="Stokksnes Sands">
+            <figure class="photo">
+                <img src="images/nahled4.jpg" alt="Stokksnes Sands">
                 <figcaption><strong>Stokksnes Sands</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/vzopTG">Kriss Williams</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
+            <figure class="photo">
+                <img src="images/nahled5.jpg" alt="Svartifoss (Black Fall)">
                 <figcaption><strong>Svartifoss (Black Fall)</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/v5Butv">Ron Kroetz</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled6.jpg" alt="Landmannalaugar">
+            <figure class="photo">
+                <img src="images/nahled6.jpg" alt="Landmannalaugar">
                 <figcaption><strong>Landmannalaugar</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/2SWHDd">Michel Osmont</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled7.jpg" alt="Iceland">
+            <figure class="photo">
+                <img src="images/nahled7.jpg" alt="Iceland">
                 <figcaption><strong>Iceland</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/aaqZLk">Eric Montford</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
+            <figure class="photo">
+                <img src="images/nahled8.jpg" alt="Bruarfoss waterfalls">
                 <figcaption><strong>Bruarfoss waterfalls</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/nuUQM7">Moyan Brenn</a></figcaption>
             </figure>
 
-            <figure><img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
+            <figure class="photo"><img src="images/nahled9.jpg" alt="Jokulsarlon glacier lagoon">
                 <figcaption><strong>Jokulsarlon glacier lagoon</strong><br>
                     Photo &copy; <a href="https://flic.kr/p/getEgS">Moyan Brenn</a></figcaption>
             </figure>
