--- a/reseni_hard/index.html
+++ b/reseni_hard/index.html
@@ -19,6 +19,7 @@
         <p class="jana">Jana Zcela Vymyšlená</p>
     </header>
 
+
     <main>
         <div class="pc_main">
             <nav>
@@ -185,17 +186,17 @@
                 </figure>
             </div>
         </div>
+
+        <footer>
+            <p>Texty převzaty z článků:</p>
+
+            <p>Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a></p>
+            <p>Michal Balada - <a href="http://www.pohora.cz/tipy-na-vylety/16352-cesta-kolem-islandu-za-10-dni/">Cesta kolem Islandu za 10 dní</a></p>
+
+            <p class="moyan">Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a></p>
+        </footer>
     </main>
-
-
-    <footer>
-        <p>Texty převzaty z článků:</p>
-
-        <p>Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a></p>
-        <p>Michal Balada - <a href="http://www.pohora.cz/tipy-na-vylety/16352-cesta-kolem-islandu-za-10-dni/">Cesta kolem Islandu za 10 dní</a></p>
-
-        <p class="moyan">Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a></p>
-    </footer>
+    </div>
 
 
 
